--- a/angularApp/src/app/map/map.component.html
+++ b/angularApp/src/app/map/map.component.html
@@ -11,11 +11,9 @@
           <agm-info-window [latitude]="mapInfo.centerLat" [longitude]="mapInfo.centerLong" >
     
             <!-- U info-window stavljamo html -->
-            <span style="font-size: 16px;font-family:'Times New Roman'">Fakultet tehničkih nauka</span>
-            <br/>
-            <span style="font-family:'Times New Roman'; color:gray;"><strong>Jugodrvo</strong></span>
-            <span style="font-family:'Times New Roman'; color:gray;">Bulevar oslobođenja 131</span>
-            <a [href]="mapInfo.link">See the site.</a>
+            
+            <span style="font-family:'Times New Roman'; color:gray;">{{mapInfo.Address}}</span>
+            
           </agm-info-window>
     
         </agm-marker>
