--- a/angularApp/src/app/type-of-vehicle/type-of-vehicle.component.html
+++ b/angularApp/src/app/type-of-vehicle/type-of-vehicle.component.html
@@ -24,7 +24,7 @@
               <input type="text" [(ngModel)]="item.Name">
             </div>
 
-            <button class="btn  btn-primary"  (click)="deleteType(service.Id)">Delete </button>
+            <button class="btn  btn-primary"  (click)="deleteType(item.Id)">Delete </button>
             <button class="btn  btn-primary"  (click)="saveType(i)">Save </button>
             <br>
             <br>
