--- a/angularApp/src/app/approve/approve.component.html
+++ b/angularApp/src/app/approve/approve.component.html
@@ -1,3 +1,44 @@
-<p>
-  approve works!
-</p>
+<div class="container">
+    <label>All Users:</label>
+      <ul>
+        <li *ngFor="let user of users; let i = index">
+          <div class="input-group ">
+            <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
+            <input type="text" [(ngModel)]="user.FullName">
+          </div>
+    
+          <div class="input-group ">
+            <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
+            <input type="text" [(ngModel)]="user.Birthday">
+          </div>
+    
+          <button *ngIf="checkApprove(i)" class="btn  btn-danger"  (click)="approve(user.Id)">Approve </button>
+          <br>
+          <br>
+        </li>
+      </ul>
+
+    <label>All Services:</label>
+      <ul>
+        <li *ngFor="let service of services; let i = index">
+          <div class="input-group ">
+            <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
+            <input type="text" [(ngModel)]="service.Name">
+          </div>
+    
+          <div class="input-group ">
+            <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
+            <input type="text" [(ngModel)]="service.Email">
+          </div>
+          
+          <div class="input-group ">
+            <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
+            <input type="text" [(ngModel)]="service.Description">
+          </div>
+    
+          <button *ngIf="checkApproveSer(i)" class="btn  btn-danger"  (click)="approveSer(service.Id)">Approve </button>
+          <br>
+          <br>
+        </li>
+      </ul>
+</div>
