--- a/angularApp/src/app/ser-preview/ser-preview.component.html
+++ b/angularApp/src/app/ser-preview/ser-preview.component.html
@@ -1,5 +1,8 @@
 <div class="container">
   <label>Service</label> 
+
+  <td style="width: 250px;"><label class="col-md-4 control-label">Logo</label><img width="200" src='{{service.Logo}}' /></td>
+
   <div class="input-group ">
       <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
       <input type="text" [(ngModel)]="service.Name">
