--- a/angularApp/src/app/rent/rent.component.html
+++ b/angularApp/src/app/rent/rent.component.html
@@ -38,7 +38,8 @@
         <input type="text" [(ngModel)]="branch.Address">
       </div>
 
-      <button  class="btn btn-primary" (click)="addBranch(i)">Add Branch</button>
+      <button  class="btn btn-primary" (click)="addGetBranch(i)">Add Get Branch</button>
+      <button  class="btn btn-primary" (click)="addRetBranch(i)">Add Ret Branch</button>
       <br>
       <br>
     </li>
