--- a/angularApp/src/app/vehicle/vehicle.component.html
+++ b/angularApp/src/app/vehicle/vehicle.component.html
@@ -1,21 +1,31 @@
-<div class="container">
+<div *ngIf="checkUserType()" class="container">
     <label>Add Vehicle</label>
     <br>
     <form  #f="ngForm" (ngSubmit)="addVehicle(f.value)">
       <div>
-        <div class="input-group ">
-          <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
-          <input id="Model" type="text" style="width:fit-content" class="form-control" placeholder="Enter Model" name="Model" ngModel required #Model = "ngModel" aria-describedby="basic-addon1">
-        </div>
+        <label>Service:</label>
+        <select id="ServiceName" ngModel #ServiceName="ngModel" name="ServiceName">
+          <option *ngFor="let item of services" [value]="item.Name" id="ServiceName" name="ServiceName">{{item.Name}}</option>
+        </select>
        
-        <div class="input-group ">
-          <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
-          <input id="Manufactor" type="text" style="width:fit-content" class="form-control" placeholder="Enter Manufactor" name="Manufactor" ngModel required #Manufactor = "ngModel" aria-describedby="basic-addon1">
-        </div>
+        <label>Types:</label>
+        <select id="Type" ngModel #Type="ngModel" name="Type">
+            <option *ngFor="let t of types" [value]="t.Name" id="Type" name="Type">{{t.Name}}</option>
+        </select>
   
         <div class="input-group ">
           <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
           <input id="Year" type="text" style="width:fit-content" class="form-control" placeholder="Enter Year" name="Year" ngModel required #Year = "ngModel" aria-describedby="basic-addon1">
+        </div>
+
+        <div class="input-group ">
+            <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
+            <input id="Manufactor" type="text" style="width:fit-content" class="form-control" placeholder="Enter Manufactor" name="Manufactor" ngModel required #Manufactor = "ngModel" aria-describedby="basic-addon1">
+        </div>
+
+        <div class="input-group ">
+            <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
+            <input id="Model" type="text" style="width:fit-content" class="form-control" placeholder="Enter Model" name="Model" ngModel required #Model = "ngModel" aria-describedby="basic-addon1">
         </div>
   
         <div class="input-group ">
@@ -27,16 +37,16 @@
           <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
           <input id="PricePerHour" type="text" style="width:fit-content" class="form-control" placeholder="Enter PricePerHour" name="PricePerHour" ngModel required #PricePerHour = "ngModel" aria-describedby="basic-addon1">
         </div>
-
-        <div class="input-group ">
-          <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
-          <input id="Unvailable" type="text" style="width:fit-content" class="form-control" placeholder="Enter Unvailable" name="Unvailable" ngModel required #Unvailable = "ngModel" aria-describedby="basic-addon1">
-        </div>
       
-        <div class="input-group ">
-          <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
-          <input id="Images" type="text" style="width:fit-content" class="form-control" placeholder="Enter Images" name="Images" ngModel required #Images = "ngModel" aria-describedby="basic-addon1">
-        </div>
+        <form  #form = "ngForm" class="groove">
+          <!-- File Button --> 
+            <label class="col-md-4 control-label" for="Logo">Logo</label>
+              <input multiple type="file" name="photo" ng2FileSelect [uploader]="uploader" enctype = "multipart/form-data"/>
+              <button type="button" class ="btn btn-success btn-s"
+              (click)="uploader.uploadAll()"
+              [disabled] ="!uploader.getNotUploadedItems().length">Upload Image</button>
+        
+        </form>
 
         <button class="btn btn-primary" type="submit">Add Vehicle</button>
       </div>
@@ -47,9 +57,19 @@
 
 
 <div class="container">
-  <label>All Vehicles:</label>
+  <label>Vehicles:</label>
+
+  <div class="input-group ">
+    <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-search"></i></span>
+    <input type="text" [(ngModel)]="searchVar">
+  </div>
+  <button class="btn  btn-primary"  (click)="searchVehicle()">Serach</button>
+  <br>
   <ul>
-    <li *ngFor="let vehicle of vehicles; let i = index">
+    <li *ngFor="let vehicle of showVehicles; let i = index">
+
+        <td style="width: 250px;"><label class="col-md-4 control-label">Logo</label><img width="200" src='{{vehicle.Images}}' /></td>
+
       <div class="input-group ">
         <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
         <input type="text" [(ngModel)]="vehicle.Model">
@@ -65,8 +85,14 @@
         <input type="text" [(ngModel)]="vehicle.Year">
       </div>
 
-      <button class="btn  btn-danger"  (click)="deleteVehicle(vehicle.Id)">Delete </button>
-      <button class="btn  btn-primary"  (click)="savevehicle(i)">Save </button>
+      <div class="input-group ">
+          <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
+          <input type="text" [(ngModel)]="vehicle.Type.Name">
+      </div>
+
+      <button *ngIf="checkUserType()" class="btn  btn-danger"  (click)="deleteVehicle(vehicle.Id)">Delete </button>
+      <button *ngIf="checkUserType()" class="btn  btn-primary"  (click)="savevehicle(i)">Save </button>
+      <button *ngIf="checkUserType()" class="btn  btn-primary"  (click)="makeUnavailabe(vehicle.Id)">Make Unavailable </button>
       <br>
       <br>
     </li>
