--- a/angularApp/src/app/ser/ser.component.html
+++ b/angularApp/src/app/ser/ser.component.html
@@ -42,6 +42,7 @@
   <ul>
     <li *ngFor="let service of services; let i = index" >
       <div *ngIf="chechServiceApprove(i)">
+        
         <div class="input-group ">
           <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
           <input type="text" [(ngModel)]="service.Name">
@@ -57,8 +58,8 @@
           <input type="text" [(ngModel)]="service.Description">
         </div>
 
-        <button *ngIf="checkUserType()" class="btn  btn-danger"  (click)="deleteService(service.Id)">Delete </button>
-        <button *ngIf="checkUserType()" class="btn  btn-primary"  (click)="saveService(i)">Save </button>
+        <button *ngIf="checkUsername(i) && checkUserType()" class="btn  btn-danger"  (click)="deleteService(service.Id)">Delete </button>
+        <button *ngIf="checkUsername(i) && checkUserType()" class="btn  btn-primary"  (click)="saveService(i)">Save </button>
         <button class="btn  btn-primary"  [routerLink]="['/prev/',service.Id]">Preview </button>
         <br>
         <br>
