--- a/angularApp/src/app/approve/approve.component.html
+++ b/angularApp/src/app/approve/approve.component.html
@@ -2,6 +2,7 @@
     <label>All Users:</label>
       <ul>
         <li *ngFor="let user of users; let i = index">
+          <div *ngIf="checkUserDeleted(i)">
           <div class="input-group ">
             <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
             <input type="text" [(ngModel)]="user.FullName">
@@ -16,12 +17,14 @@
           <button *ngIf="chackRole(i)" class="btn  btn-danger"  (click)="blockService(user.Id)">Service Block </button>
           <br>
           <br>
+          </div>
         </li>
       </ul>
 
     <label>All Services:</label>
       <ul>
         <li *ngFor="let service of services; let i = index">
+            <div *ngIf="checkServiceDeleted(i)">
           <div class="input-group ">
             <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
             <input type="text" [(ngModel)]="service.Name">
@@ -40,14 +43,15 @@
           <button *ngIf="checkApproveSer(i)" class="btn  btn-danger"  (click)="approveSer(service.Id)">Approve </button>
           <br>
           <br>
+            </div>
         </li>
       </ul>
 
-      <label>All Vehicles:</label>
+      <label>All Rents:</label>
       <ul>
         <li *ngFor="let rent of rents; let i = index">
           <div *ngIf="chechAvailableVehicle(i)">
-       
+              <div *ngIf="checkRentDeleted(i)">
             <td style="width: 250px;"><label class="col-md-4 control-label">Logo</label><img width="200" src='{{rent.Vehicle.Images}}' /></td>
             
             <div class="input-group ">
@@ -68,6 +72,7 @@
             <button class="btn  btn-danger"  (click)="availableVehicle(rent.Vehicle.Id)">Available Vehicle </button>
             <br>
             <br>
+          </div>
           </div>
         </li>
       </ul>
