--- a/angularApp/src/app/login/login.component.html
+++ b/angularApp/src/app/login/login.component.html
@@ -4,11 +4,21 @@
         <div class="input-group ">
           <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-user"></i></span>
           <input id="Username" type="text" style="width:fit-content" class="form-control" placeholder="Enter Username" name="Username" ngModel required #Username = "ngModel" aria-describedby="basic-addon1">
+          <div *ngIf="Username.errors &&(Username.dirty || Username.touched)" class="alert alert-danger">
+            <div [hidden]="!Username.errors.required">
+                Username is required!
+            </div>
+          </div>
         </div>
        
         <div class="input-group ">
           <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-lock"></i></span>
           <input id="Password" type="password" style="width:fit-content" class="form-control" placeholder="Enter Password" name="Password" ngModel required #Password = "ngModel" aria-describedby="basic-addon1">
+          <div *ngIf="Password.errors &&(Password.dirty || Password.touched)" class="alert alert-danger">
+            <div [hidden]="!Password.errors.required">
+              Password is required!
+            </div>
+          </div>
         </div>
         
         <button class="btn btn-primary " type="submit">Login</button>
