--- a/angularApp/src/app/ser/ser.component.html
+++ b/angularApp/src/app/ser/ser.component.html
@@ -41,7 +41,7 @@
 <label>All Services:</label>
   <ul>
     <li *ngFor="let service of services; let i = index" >
-      <div *ngIf="chechServiceApprove(i)">
+      <div *ngIf="chechServiceApprove(i) && checkServiceDeleted(i)">
         
         <div class="input-group ">
           <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-envelope"></i></span>
